fix(jpa): 修复批量操作和加密转换器中的异常处理问题
- 在BatchSaveTemplate中添加entityManager.clear()清理持久化上下文防止脏状态干扰
- 修复EncryptConverter中cipher池管理，确保运行时异常时正确丢弃cipher实例
- 改进CodeEnumType缓存构建逻辑，避免实例字段竞态条件并增强错误提示
- 优化KeysetPaginationHelper自动检测数据库NULLS排序语义的实现
- 修复MergeSpec中merge操作后实体引用更新问题，确保返回正确托管实例
- 增强Oracle和SqlServer方言中upsert SQL构建的参数验证
- 改进软删除批量执行器的安全检查机制，预先验证影响行数避免事务污染
- 优化全局配置持有者的退避重试逻辑，使用nanoTime确保单调递增
- 修复标识符验证器和数据源代理中的并发安全问题
- 增强自动配置中事件发布器的懒加载和异常处理机制